@@ -1,11 +1,14 @@
 package com.ironoc.portfolio.service;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.type.CollectionType;
 import com.ironoc.portfolio.client.Client;
 import com.ironoc.portfolio.config.PropertyConfigI;
 import com.ironoc.portfolio.domain.RepositoryDetailDomain;
+import com.ironoc.portfolio.domain.RepositoryIssueDomain;
 import com.ironoc.portfolio.dto.RepositoryDetailDto;
-import com.ironoc.portfolio.job.GitDetailsJob;
+import com.ironoc.portfolio.dto.RepositoryIssueDto;
+import com.ironoc.portfolio.job.GitDetailsRunnable;
 import com.ironoc.portfolio.utils.UrlUtils;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -13,11 +16,11 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import javax.net.ssl.HttpsURLConnection;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -44,13 +47,7 @@ public class GitDetailsServiceTest {
     private PropertyConfigI propertyConfigMock;
 
     @Mock
-    private ObjectMapper objectMapperMock;
-
-    @Mock
-    private Client gitClient;
-
-    @Mock
-    private HttpsURLConnection httpsURLConnectionMock;
+    private Client gitClientMock;
 
     @Mock
     private UrlUtils urlUtilsMock;
@@ -58,7 +55,7 @@ public class GitDetailsServiceTest {
     @Mock
     private GitRepoCache gitRepoCacheMock;
 
-    private ObjectMapper objectMapper = new ObjectMapper();
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
     private static final String TEST_URI = "https://unittest.github.com/users/{username}/repos";
 
@@ -85,35 +82,35 @@ public class GitDetailsServiceTest {
                 .isPrivate(false)
                 .build();
 
-        when(propertyConfigMock.getGitApiEndpoint())
+        when(propertyConfigMock.getGitApiEndpointRepos())
                 .thenReturn(TEST_URI);
         when(urlUtilsMock.isValidURL(anyString())).thenReturn(true);
-        when(gitClient.createConn(anyString())).thenReturn(httpsURLConnectionMock);
-        when(gitClient.readInputStream(httpsURLConnectionMock)).thenReturn(jsonInputStream);
-        when(objectMapperMock.readValue(jsonInputStream, RepositoryDetailDto[].class))
-                .thenReturn(objectMapper.readValue(jsonInputStream, RepositoryDetailDto[].class));
+        when(propertyConfigMock.getGitApiEndpointRepos()).thenReturn(TEST_URI);
+        when(urlUtilsMock.isValidURL(anyString())).thenReturn(true);
+        CollectionType listType = objectMapper.getTypeFactory()
+                .constructCollectionType(ArrayList.class, RepositoryDetailDto.class);
+        when(gitClientMock.callGitHubApi(anyString(), anyString(), any(), anyString()))
+                .thenReturn(objectMapper.readValue(jsonInputStream, listType));
 
         // when
         List<RepositoryDetailDto> results = gitDetailsService.getRepoDetails(testUserId);
 
         // then
-        verify(propertyConfigMock).getGitApiEndpoint();
+        verify(propertyConfigMock).getGitApiEndpointRepos();
         verify(urlUtilsMock).isValidURL(anyString());
-        verify(propertyConfigMock).getGitApiEndpoint();
-        verify(gitClient).createConn(anyString());
-        verify(gitClient).readInputStream(any(HttpsURLConnection.class));
-        verify(objectMapperMock).readValue(any(InputStream.class), any(Class.class));
-        verify(gitClient).closeConn(any(InputStream.class));
-;
+        verify(gitClientMock).callGitHubApi(anyString(), anyString(), any(), anyString());
+
         assertThat(results, is(hasSize(2)));
         Optional<RepositoryDetailDto> result = results.stream().findFirst();
-        assertThat(result.get().getName(), is(expected.getName()));
-        assertThat(result.get().getFullName(), is(expected.getFullName()));
-        assertThat(result.get().getDescription(), is(expected.getDescription()));
-        assertThat(result.get().getTopics(), is(expected.getTopics()));
-        assertThat(result.get().getHomePage(), is(expected.getHomePage()));
-        assertThat(result.get().getHtmlUrl(), is(expected.getHtmlUrl()));
-        assertThat(result.get().isPrivate(), is(expected.isPrivate()));
+        if (result.isPresent()) {
+            assertThat(result.get().getName(), is(expected.getName()));
+            assertThat(result.get().getFullName(), is(expected.getFullName()));
+            assertThat(result.get().getDescription(), is(expected.getDescription()));
+            assertThat(result.get().getTopics(), is(expected.getTopics()));
+            assertThat(result.get().getHomePage(), is(expected.getHomePage()));
+            assertThat(result.get().getHtmlUrl(), is(expected.getHtmlUrl()));
+            assertThat(result.get().isPrivate(), is(expected.isPrivate()));
+        }
         RepositoryDetailDto result2 = results.get(1);
         assertThat(result2.getName(), is("booking-sys"));
         assertThat(result2.getFullName(), is("conorheffron/booking-sys"));
@@ -123,6 +120,51 @@ public class GitDetailsServiceTest {
                 is("https://booking-sys-ebgefrdmh3afbhee.northeurope-01.azurewebsites.net/book/"));
         assertThat(result2.getHtmlUrl(), is("https://github.com/conorheffron/booking-sys"));
         assertThat(result2.isPrivate(), is(Boolean.TRUE));
+    }
+
+    @Test
+    public void test_get_issues_success() throws IOException {
+        // given
+        InputStream jsonInputStream = Thread.currentThread().getContextClassLoader()
+                .getResourceAsStream("json" + File.separator + "test_issues_response.json");
+        String testRepo = "bio-cell-red-edge";
+        String testUserId = "conor-h";
+        String testBody = "Use React or Angular framework & JavaScript or TypeScript as implementation language? " +
+                "\r\n- Research & select best option.";
+        String testTitle = "Re-write frontend with React <POC>";
+        String testIssueNo = "62";
+        RepositoryIssueDto expected = RepositoryIssueDto.builder()
+                .number(testIssueNo)
+                .title(testTitle)
+                .body(testBody)
+                .build();
+
+        when(propertyConfigMock.getGitApiEndpointIssues()).thenReturn(TEST_URI);
+        when(urlUtilsMock.isValidURL(anyString())).thenReturn(true);
+        when(urlUtilsMock.isValidURL(anyString())).thenReturn(true);
+        CollectionType listType = objectMapper.getTypeFactory()
+                .constructCollectionType(ArrayList.class, RepositoryIssueDto.class);
+        when(gitClientMock.callGitHubApi(anyString(), anyString(), any(), anyString()))
+                .thenReturn(objectMapper.readValue(jsonInputStream, listType));
+
+        // when
+        List<RepositoryIssueDto> results = gitDetailsService.getIssues(testUserId, testRepo);
+
+        // then
+        verify(propertyConfigMock).getGitApiEndpointIssues();
+        verify(urlUtilsMock).isValidURL(anyString());
+        verify(gitClientMock).callGitHubApi(anyString(), anyString(), any(), anyString());
+
+        assertThat(results, is(hasSize(2)));
+        Optional<RepositoryIssueDto> result = results.stream().findFirst();
+        assertThat(result.get().getNumber(), is(expected.getNumber()));
+        assertThat(result.get().getTitle(), is(expected.getTitle()));
+        assertThat(result.get().getBody(), is(expected.getBody()));
+        RepositoryIssueDto result2 = results.get(1);
+        assertThat(result2.getNumber(), is("57"));
+        assertThat(result2.getTitle(), is("Setup LB, Support SSL"));
+        assertThat(result2.getBody(), is("- [x] 1. Setup LB\r\n- [ ] 2. " +
+                "Support SSL\r\n- [ ] 3. Setup domain, map to AWS LB"));
     }
 
     @Test
@@ -139,25 +181,21 @@ public class GitDetailsServiceTest {
                 .isPrivate(false)
                 .build();
 
-        when(propertyConfigMock.getGitApiEndpoint()).thenReturn(TEST_URI);
+        when(propertyConfigMock.getGitApiEndpointRepos()).thenReturn(TEST_URI);
         when(urlUtilsMock.isValidURL(anyString())).thenReturn(true);
-        when(gitClient.createConn(anyString())).thenReturn(httpsURLConnectionMock);
-        when(gitClient.readInputStream(httpsURLConnectionMock)).thenReturn(jsonInputStream);
-        when(objectMapperMock.readValue(jsonInputStream, RepositoryDetailDto[].class))
-                .thenReturn(objectMapper.readValue(jsonInputStream, RepositoryDetailDto[].class));
+        CollectionType listType = objectMapper.getTypeFactory()
+                .constructCollectionType(ArrayList.class, RepositoryDetailDto.class);
+        when(gitClientMock.callGitHubApi(anyString(), anyString(), any(), anyString()))
+                .thenReturn(objectMapper.readValue(jsonInputStream, listType));
 
         // when
         List<RepositoryDetailDto> results = gitDetailsService.getRepoDetails(testUserId);
 
         // then
-        verify(propertyConfigMock).getGitApiEndpoint();
+        verify(propertyConfigMock).getGitApiEndpointRepos();
         verify(urlUtilsMock).isValidURL(anyString());
-        verify(propertyConfigMock).getGitApiEndpoint();
-        verify(gitClient).createConn(anyString());
-        verify(gitClient).readInputStream(any(HttpsURLConnection.class));
-        verify(objectMapperMock).readValue(any(InputStream.class), any(Class.class));
-        verify(gitClient).closeConn(any(InputStream.class));
-        ;
+        verify(gitClientMock).callGitHubApi(anyString(), anyString(), any(), anyString());
+
         assertThat(results, is(hasSize(1)));
         Optional<RepositoryDetailDto> result = results.stream().findFirst();
         assertThat(result.get().getName(), is(expected.getName()));
@@ -178,7 +216,7 @@ public class GitDetailsServiceTest {
         List<RepositoryDetailDto> results = gitDetailsService.getRepoDetails(testUserId);
 
         // then
-        verify(gitRepoCacheMock).get(GitDetailsJob.USERNAME_HOME_PAGE);
+        verify(gitRepoCacheMock).get(GitDetailsRunnable.USERNAME_HOME_PAGE);
 
         assertThat(results, is(notNullValue()));
         assertThat(results, is(hasSize(0)));
@@ -188,13 +226,13 @@ public class GitDetailsServiceTest {
     public void test_getRepoDetails_url_invalid_fail() {
         // given
         String testUserId = "conorheffron-test-id";
-        when(propertyConfigMock.getGitApiEndpoint()).thenReturn(TEST_URI);
+        when(propertyConfigMock.getGitApiEndpointRepos()).thenReturn(TEST_URI);
 
         // when
         List<RepositoryDetailDto> results = gitDetailsService.getRepoDetails(testUserId);
 
         // then
-        verify(propertyConfigMock).getGitApiEndpoint();
+        verify(propertyConfigMock).getGitApiEndpointRepos();
 
         assertThat(results, is(notNullValue()));
         assertThat(results, is(hasSize(0)));
@@ -208,7 +246,7 @@ public class GitDetailsServiceTest {
 
         // when
         List<RepositoryDetailDomain> results = gitDetailsService.mapRepositoriesToResponse(
-                Arrays.asList(objectMapper.readValue(jsonInputStream, RepositoryDetailDto[].class)));
+                List.of(objectMapper.readValue(jsonInputStream, RepositoryDetailDto[].class)));
 
         assertThat(results, is(hasSize(2)));
         Optional<RepositoryDetailDomain> result = results.stream().findFirst();
@@ -230,7 +268,41 @@ public class GitDetailsServiceTest {
         assertThat(result2.getAppHome(),
                 is("https://booking-sys-ebgefrdmh3afbhee.northeurope-01.azurewebsites.net/book/"));
         assertThat(result2.getRepoUrl(), is("https://github.com/conorheffron/booking-sys"));
+        jsonInputStream.close();
+    }
 
+    @Test
+    public void test_mapResponseToRepositories_success() throws IOException {
+        // given
+        InputStream jsonInputStream = Thread.currentThread().getContextClassLoader()
+                .getResourceAsStream("json" + File.separator + "test_repo_detail_response.json");
+
+        // when
+        List<RepositoryDetailDto> results = gitDetailsService.mapResponseToRepositories(
+                Arrays.asList(objectMapper.readValue(jsonInputStream, RepositoryDetailDomain[].class)));
+
+        assertThat(results, is(hasSize(2)));
+        Optional<RepositoryDetailDto> result = results.stream().findFirst();
+        assertThat(result.get().getName(), is("bio-cell-red-edge"));
+        assertThat(result.get().getFullName(), is("conorheffron/bio-cell-red-edge"));
+        assertThat(result.get().getDescription(),
+                is("Edge Detection of Biological Cell (Image Processing Script)"));
+        String testTopics = "[Biology, computer-vision, image-processing, scikitlearn-machine-learning]";
+        assertThat(result.get().getTopics(),
+                is(Arrays.asList(testTopics.substring(1, testTopics.length() - 1)
+                        .split(", "))));
+        assertThat(result.get().getHomePage(),
+                is("https://conorheffron.github.io/bio-cell-red-edge/"));
+        assertThat(result.get().getHtmlUrl(),
+                is("https://github.com/conorheffron/bio-cell-red-edge"));
+        RepositoryDetailDto result2 = results.get(1);
+        assertThat(result2.getName(), is("booking-sys"));
+        assertThat(result2.getFullName(), is(emptyString()));
+        assertThat(result2.getDescription(), is("python3 and django5 web app"));
+        assertThat(result2.getTopics(), is(emptyIterable()));
+        assertThat(result2.getHomePage(),
+                is("https://booking-sys-ebgefrdmh3afbhee.northeurope-01.azurewebsites.net/book/"));
+        assertThat(result2.getHtmlUrl(), is("https://github.com/conorheffron/booking-sys"));
         jsonInputStream.close();
     }
 
@@ -244,6 +316,7 @@ public class GitDetailsServiceTest {
         List<RepositoryDetailDomain> results = gitDetailsService.mapRepositoriesToResponse(
                 Arrays.asList(objectMapper.readValue(jsonInputStream, RepositoryDetailDto[].class)));
 
+        // then
         assertThat(results, is(hasSize(1)));
         Optional<RepositoryDetailDomain> result = results.stream().findFirst();
         assertThat(result.get().getName(), is("conorheffron/ironoc-test"));
@@ -252,6 +325,31 @@ public class GitDetailsServiceTest {
         assertThat(result.get().getTopics(), is("[]"));
         assertThat(result.get().getAppHome(), is(emptyString()));
         assertThat(result.get().getRepoUrl(), is(emptyString()));
+        jsonInputStream.close();
+    }
+
+    @Test
+    public void test_mapIssuesToResponse_success() throws IOException {
+        // given
+        InputStream jsonInputStream = Thread.currentThread().getContextClassLoader()
+                .getResourceAsStream("json" + File.separator + "test_issues_response.json");
+
+        // when
+        List<RepositoryIssueDomain> results = gitDetailsService.mapIssuesToResponse(
+                Arrays.asList(objectMapper.readValue(jsonInputStream, RepositoryIssueDto[].class)));
+
+        // then
+        assertThat(results, is(hasSize(2)));
+        Optional<RepositoryIssueDomain> result = results.stream().findFirst();
+        assertThat(result.get().getNumber(), is("62"));
+        assertThat(result.get().getTitle(), is("Re-write frontend with React <POC>"));
+        assertThat(result.get().getBody(), is("Use React or Angular framework & JavaScript " +
+                "or TypeScript as implementation language? \r\n- Research & select best option."));
+        RepositoryIssueDomain result2 = results.get(1);
+        assertThat(result2.getNumber(), is("57"));
+        assertThat(result2.getTitle(), is("Setup LB, Support SSL"));
+        assertThat(result2.getBody(), is("- [x] 1. Setup LB\r\n- [ ] 2. " +
+                "Support SSL\r\n- [ ] 3. Setup domain, map to AWS LB"));
         jsonInputStream.close();
     }
 }
